--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/mongodb": "^4.0.7",
     "eslint-config-prettier": "8.6.0",
     "prettier": "2.8.1"
   }
