--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.2.4",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
