--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
+    "node-cron": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
