--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
