--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-cron": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
