--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/mongodb": "^4.0.7",
+    "@types/react-infinite-scroller": "^1.2.3",
     "eslint-config-prettier": "8.6.0",
     "prettier": "2.8.1"
   }
