--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.8.3",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
+    "next-seo": "^5.15.0",
     "node-cron": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
