install gtag type

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/gtag.js": "^0.0.12",
     "@types/mongodb": "^4.0.7",
     "@types/react-infinite-scroller": "^1.2.3",
     "eslint-config-prettier": "8.6.0",
